@@ -5,7 +5,8 @@
 - DCI instance discovery
 - Array initializers in NXSL
 - NXSL function PostEvent can use event names instead of event codes
-- New NXSL functions: AgentReadParameter, CreateDCI, ManageObject, UnmanageObject
+- New NXSL functions: AgentReadParameter, CreateDCI, ManageObject, 
+  SetInterfaceExpectedState, UnmanageObject
 - Management console:
 	- Network map functionality in web console now in sync with desktop version
 	- Alarm details view improved
